--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -119,8 +119,8 @@
       <p><strong>الاسم:</strong> {{ teacher['full_name'] }}</p>
       <p><strong>الرقم الجامعي:</strong> {{ teacher['university_id'] }}</p>
       <p><strong>المؤهل العلمي:</strong> {{ teacher['education_level'] }}</p>
-      <p><strong>القسم:</strong> {{ teacher['department_name'] }}</p>
-      <p><strong>السنين التي يُدرّسها:</strong> {{ teacher['year_names'] }}</p>
+      <p><strong>القسم:</strong> {{ teacher['department_id'] }}</p>
+      <p><strong>السنين التي يُدرّسها:</strong> {{ teacher['year_id'] }}</p>
     </div>
 
     <!-- روابط الجداول -->
