--- a/templates/departments.html
+++ b/templates/departments.html
@@ -22,7 +22,7 @@
       text-align: center;
     }
     th {
-      background-color: #007bff;
+      background-color: #6c757d; /* رمادي متوسط */
       color: #fff;
     }
     tr:nth-child(even) {
@@ -40,6 +40,8 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
+  <a href="/export_courses" class="export-btn" title="تصدير إلى Excel" style="padding: 8px 16px; background-color: #6c757d; color: white; text-decoration: none; border-radius: 5px;">📤  </a>
+
     <h1>جدول الأقسام</h1>
     <table border="1">
         <tr>
