--- a/templates/semesters.html
+++ b/templates/semesters.html
@@ -72,7 +72,7 @@
   <h2>➕ إضافة فصل جديد</h2>
   <form action="/add_semester" method="post">
     <input type="text" name="semester_name" placeholder="اسم الفصل" required>
-    <input type="number" name="year_id" placeholder="ID السنة" required>
+    <input type="text" name="year_name" placeholder=" السنة" required>
     <input type="text" name="department_name" placeholder="اسم القسم" required>
     <input type="date" name="start_date" required>
     <input type="date" name="end_date" required>
