--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-   <a href="/export_courses" class="export-btn" title="تصدير إلى Excel" style="padding: 8px 16px; background-color: #6c757d; color: white; text-decoration: none; border-radius: 5px;">📤  </a>
+   <a href="/export_teachers" class="export-btn" title="تصدير إلى Excel" style="padding: 8px 16px; background-color: #6c757d; color: white; text-decoration: none; border-radius: 5px;">📤  </a>
 
   <form method="get" action="/teachers">
     <input type="text" name="search_id" placeholder="ابحث بالرقم الجامعي للمدرّس">
